recovery/route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-036fcc70956782abe",
                    "RouteTableId": "rtb-020e1a491450972b9",
                    "SubnetId": "subnet-0e95d953fd553cbd1",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0afc0bffaf25409d3",
                    "RouteTableId": "rtb-020e1a491450972b9",
                    "SubnetId": "subnet-0e54df62d1a4463bc",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-020e1a491450972b9",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-028d864c65be623b6",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "luciel-public-rt"
                }
            ],
            "VpcId": "vpc-04311aadf655620f0",
            "OwnerId": "729005488042"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-086fb13955a6eede5",
                    "RouteTableId": "rtb-0286e8d9b2205fa85",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0286e8d9b2205fa85",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-04311aadf655620f0",
            "OwnerId": "729005488042"
        }
    ]
}
